2004-01-28  MenTaLguY  <mental@rydia.net>

	* src/toolbox.cpp: aux toolbar now expands properly when torn off
	(fix for bug #874923)

2004-01-28  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/seltrans.cpp: Various cleanups, including addressing some
	warnings, and doing some more NR::Point'ification.

	* src/knot.h, src/knot.cpp (sp_knot_set_position): Change from
	pass-by-value to pass-by-const-reference.

	* src/geom.cpp (sp_intersector_line_intersection): Restore
	  definition of previous local `cross' function, but "inline" the
	  dot(rot90(a), b) definition.  This makes the definition conform to
	  the documentation.
	* src/desktop-snap.cpp (sp_intersector_a_vector_snap): Undo a recent
	  change that adapted to the previously-introduced bug in
	  sp_intersector_line_intersection.

	* icons/Makefile.am: s/icons_dir/iconsdir/g for automake.
	* src/dialogs/Makefile.am, src/widgets/Makefile.am:
	  s/icons_dir/iconsdir/g for consistency with icons/Makefile.am.

2004-01-27  jon phillips <jon@users.sourceforge.net>

        * Makefile.am: changed 'glade' globally to 'icons'

        * Makefile.mingw: changed 'glade' globally to 'icons'

        * config.h.mingw: changed 'INKSCAPE_GLADEDIR' to 'INKSCAPE_ICONS_DIR'

        * configure.in: changed 'glade' globally to 'icons'
        
        * Makefile.am: changed 'gladedir' to 'icons_dir', and fixed spacing, 
          changed 'glad_DATA' to 'icons_DATA'

        * glade/about_svg.tmpl: changed 'glade' globally to 'icons'

        * po/pl.po: changed 'glade' globally to 'icons'

        * src/config.h.win32: changed 'SODIPODI_GLADEDIR' to 'SODIPODI_ICONS_DIR'
        * src/dialogs/Makefile.am: changed 'gladedir' to 'icons_dir', changed 
	  '-DINKSCAPE_GLADEDIR=\""$(gladedir)"\" \' to 
          '-DINKSCAPE_ICONS_DIR=\""$(icons_dir)"\" \'

        * src/dialogs/makefile.msc: changed 'gladedir' to 'icons_dir'

        * src/dialogs/object-properties.cpp: changed 'INKSCAPE_GLADEDIR' to 